--- a/configs/example/waymo_train_049.yaml
+++ b/configs/example/waymo_train_049.yaml
@@ -1,5 +1,5 @@
 task: waymo_full_exp
-source_path: ./data/waymo/training/002
+source_path: ./data/waymo/training/049
 exp_name: waymo_train_002
 
 data:
@@ -7,8 +7,8 @@ data:
   split_train: 1
   type: Waymo
   white_background: false
-  selected_frames: [98, 198]
-  cameras: [0, 1, 2,3,4]
+  selected_frames: [98, 197]
+  cameras: [0, 1, 2, 3,4]
   extent: 10
   use_colmap: true
   filter_colmap: true
