--- a/configs/example/waymo_train_002.yaml
+++ b/configs/example/waymo_train_002.yaml
@@ -8,7 +8,7 @@ data:
   type: Waymo
   white_background: false
   selected_frames: [98, 198]
-  cameras: [0, 1, 2,3,4]
+  cameras: [0, 1, 2, 3, 4]
   extent: 10
   use_colmap: true
   filter_colmap: true
@@ -58,7 +58,7 @@ optim:
 
   lambda_dssim: 0.2
   lambda_sky: 0.05
-  lambda_sky_scale: [1, 1, 0]
+  lambda_sky_scale: [0, 1, 1, 0, 1]
   lambda_mask: 0.1
   lambda_reg: 0.1
   lambda_depth_lidar: 0.1
@@ -75,4 +75,4 @@ optim:
 
 render:
   fps: 24
-  concat_cameras: [1, 0, 2]
+  concat_cameras: [3, 1, 0, 2, 4]
